<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.kit.dopler</groupId>
    <artifactId>smt_dopler</artifactId>
    <version>2.0.0</version>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <javadoc.disabled>true</javadoc.disabled>
        <deploy.disabled>true</deploy.disabled>
        <source.disabled>true</source.disabled>
        <checkstyle-maven-plugin.version>3.4.0</checkstyle-maven-plugin.version>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>com.google.ortools</groupId>
            <artifactId>ortools-java</artifactId>
            <version>9.14.6206</version>
        </dependency>
        <dependency>
            <groupId>io.github.universal-variability-language</groupId>
            <artifactId>uvl-parser</artifactId>
            <version>0.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.universal-variability-language</groupId>
            <artifactId>uvl-metamodel</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
		<dependency>
    		<groupId>org.antlr</groupId>
    		<artifactId>antlr4-runtime</artifactId>
    		<version>4.13.2</version>
		</dependency>
    </dependencies>
    
    <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/edu/kit/dopler</directory>
                <includes>
                    <include>**/*.java</include>
                </includes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/test/edu/kit/dopler</directory>
                <includes>
                    <include>**/*.java</include>
                </includes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>.</directory>
                <includes>
                    <include>LICENSE</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>